--- a/modules/etcd/etcd.tf.tmpl
+++ b/modules/etcd/etcd.tf.tmpl
@@ -4,7 +4,7 @@
 resource "aws_autoscaling_group" "etcd" {
   name = "etcd"
   # This placeholder will be replaced by array of variables defined for availability zone in the module's variables
-  availability_zones = [ "${var.etcd_subnet_az_b}", "${var.etcd_subnet_az_c}", "${var.etcd_subnet_az_d}", "${var.etcd_subnet_az_e}" ]
+  availability_zones = <%MODULE-AZ-VARIABLES-ARRAY%>
   min_size = "${var.cluster_min_size}"
   max_size = "${var.cluster_max_size}"
   desired_capacity = "${var.cluster_desired_capacity}"
@@ -14,7 +14,7 @@ resource "aws_autoscaling_group" "etcd" {
 
   launch_configuration = "${aws_launch_configuration.etcd.name}"
   # This placeholder will be replaced by array of variables defined for VPC zone IDs in the module's variables
-  vpc_zone_identifier = [ "${var.etcd_subnet_b_id}", "${var.etcd_subnet_c_id}", "${var.etcd_subnet_d_id}", "${var.etcd_subnet_e_id}" ]
+  vpc_zone_identifier = <%MODULE-ID-VARIABLES-ARRAY%>
 
   tag {
     key = "Name"
