--- a/modules/elb/variables.tf.tmpl
+++ b/modules/elb/variables.tf.tmpl
@@ -8,12 +8,4 @@ variable "vpc_cidr" { }
 
 # This placeholder will be replaced by module subnet id and availability zone tf variable definations
 # For more information look into 'substitute-VPC-AZ-placeholders.sh'
-
-		variable "elb_subnet_b_id" { }
-		variable "elb_subnet_az_b" { }
-		variable "elb_subnet_c_id" { }
-		variable "elb_subnet_az_c" { }
-		variable "elb_subnet_d_id" { }
-		variable "elb_subnet_az_d" { }
-		variable "elb_subnet_e_id" { }
-		variable "elb_subnet_az_e" { } }
+<%MODULE-SUBNET-VARIABLES%> }
