--- a/modules/gocd/variables.tf.tmpl
+++ b/modules/gocd/variables.tf.tmpl
@@ -17,12 +17,4 @@ variable "vpc_cidr" { }
 
 # This placeholder will be replaced by module subnet id and availability zone tf variable definations
 # For more information look into 'substitute-VPC-AZ-placeholders.sh'
-
-		variable "gocd_subnet_b_id" { }
-		variable "gocd_subnet_az_b" { }
-		variable "gocd_subnet_c_id" { }
-		variable "gocd_subnet_az_c" { }
-		variable "gocd_subnet_d_id" { }
-		variable "gocd_subnet_az_d" { }
-		variable "gocd_subnet_e_id" { }
-		variable "gocd_subnet_az_e" { }
+<%MODULE-SUBNET-VARIABLES%>
