--- a/resources/terraforms/module-dockerhub.tf.tmpl
+++ b/resources/terraforms/module-dockerhub.tf.tmpl
@@ -19,10 +19,5 @@ module "dockerhub" {
 
     # This placeholder will be replaced by ADMIRAL subnet id and availability zone variables
     # For more information look into 'substitute-VPC-AZ-placeholders.sh'
-    
-		dockerhub_subnet_a_id = "${module.vpc.admiral_subnet_a_id}"
-		dockerhub_subnet_b_id = "${module.vpc.admiral_subnet_b_id}"
-	
-		dockerhub_subnet_az_a = "${module.vpc.admiral_subnet_az_a}"
-		dockerhub_subnet_az_b = "${module.vpc.admiral_subnet_az_b}"
+    <%ADMIRAL-SUBNET-IDS-AND-AZS%>
 }
