--- a/resources/terraforms/module-etcd.tf.tmpl
+++ b/resources/terraforms/module-etcd.tf.tmpl
@@ -23,10 +23,5 @@ module "etcd" {
 
     # This placeholder will be replaced by MODULE subnet id and availability zone variables
     # For more information look into 'substitute-VPC-AZ-placeholders.sh'
-    
-		etcd_subnet_a_id = "${module.vpc.etcd_subnet_a_id}"
-		etcd_subnet_b_id = "${module.vpc.etcd_subnet_b_id}"
-	
-		etcd_subnet_az_a = "${module.vpc.etcd_subnet_az_a}"
-		etcd_subnet_az_b = "${module.vpc.etcd_subnet_az_b}"
+    <%MODULE-SUBNET-IDS-AND-AZS%>
 }
