Add CLUSTER_NAME as the prefix for keypairs. Change IAM role policy {worker,admiral,etcd}_policy.json to file template and use CLUSTER_NAME, ACCOUNT_NAME  variables. Move TF_GET (terraform get -update) to resource_plan target, better dependencies.

--- a/resources/cloud-config/etcd.yaml.tmpl
+++ b/resources/cloud-config/etcd.yaml.tmpl
@@ -6,7 +6,7 @@ coreos:
     listen-client-urls: http://0.0.0.0:2379,http://0.0.0.0:4001
     listen-peer-urls: http://$private_ipv4:2380
   fleet:
-    metadata: env=CLUSTER-NAME,platform=ec2,provider=aws,role=etcd2
+    metadata: env=${CLUSTER_NAME},platform=ec2,provider=aws,role=etcd2
     public-ip: $private_ipv4
   update:
     reboot-strategy: best-effort
@@ -184,7 +184,7 @@ write_files:
       /usr/bin/docker run -v /etc/sysconfig/:/etc/sysconfig/ $image
       
       # upload etcd initial-cluster urls to s3 bucket for worker cluster's etcd_proxy
-      /usr/bin/docker run -v /etc/sysconfig/:/etc/sysconfig/ --entrypoint /etcd-aws-proxy $image
+      /usr/bin/docker run -v /etc/sysconfig/:/etc/sysconfig/ --env S3BUCKET="s3://${AWS_ACCOUNT}-${CLUSTER_NAME}-cloudinit" --entrypoint /etcd-aws-proxy $image
 
   - path: /etc/aws/account.envvars
     permissions: 0644
