[WIP] build components in their own build dir to isolate compoenent building context. Added EFS.

--- a/resources/cloud-config/etcd.yaml.tmpl
+++ b/resources/cloud-config/etcd.yaml.tmpl
@@ -129,7 +129,8 @@ write_files:
             cd /var/lib/apps; git pull
         else
             make -p /var/lib
-            git clone https://github.com/dockerage/coreos-cluster-apps /var/lib/apps
+            #git clone https://github.com/dockerage/coreos-cluster-apps /var/lib/apps
+            git clone APP_REPOSITORY /var/lib/apps
         fi
   - path: /opt/bin/s3sync.sh
     permissions: 0700
