--- a/resources/cloud-config/admiral.yaml.tmpl
+++ b/resources/cloud-config/admiral.yaml.tmpl
@@ -148,7 +148,7 @@ write_files:
             cd /var/lib/apps; git pull
         else
             make -p /var/lib
-            git clone https://github.com/dockerage/coreos-cluster-apps /var/lib/apps
+            git clone git clone ${APP_REPOSITORY} /var/lib/apps
         fi
   - path: /opt/bin/s3sync.sh
     permissions: 0700
