--- a/resources/cloud-config/etcd.yaml.tmpl
+++ b/resources/cloud-config/etcd.yaml.tmpl
@@ -130,7 +130,7 @@ write_files:
         else
             make -p /var/lib
             #git clone https://github.com/dockerage/coreos-cluster-apps /var/lib/apps
-            git clone APP_REPOSITORY /var/lib/apps
+            git clone ${APP_REPOSITORY} /var/lib/apps
         fi
   - path: /opt/bin/s3sync.sh
     permissions: 0700
