--- a/resources/cloud-config/etcd.yaml.tmpl
+++ b/resources/cloud-config/etcd.yaml.tmpl
@@ -129,7 +129,7 @@ write_files:
         then 
             cd /var/lib/apps; git pull
         else
-            make -p /var/lib
+            mkdir -p /var/lib
             #git clone https://github.com/dockerage/coreos-cluster-apps /var/lib/apps
             git clone ${APP_REPOSITORY} /var/lib/apps
         fi
