--- a/resources/cloud-config/etcd.yaml.tmpl
+++ b/resources/cloud-config/etcd.yaml.tmpl
@@ -124,8 +124,8 @@ write_files:
     content: |
         #!/bin/bash
         # This script sync /var/lib/apps with github repo
-        export GIT_SSH_COMMAND="ssh -i /root/.ssh/git-sync-rsa.pem"
-        if [[ -d /var/lib/apps ]]; 
+        export GIT_SSH_COMMAND=${GIT_SSH_COMMAND}
+        if [[ -d /var/lib/apps/.git ]]; 
         then 
             cd /var/lib/apps; git pull
         else
@@ -143,14 +143,14 @@ write_files:
         AWS_CONFIG_ENV=/root/.aws/envvars
         source $AWS_CONFIG_ENV
         IMAGE=suet/awscli:latest
-        APPBUCKET=s3://$${AWS_ACCOUNT}-coreos-cluster-config/apps
+        APPBUCKET=s3://${AWS_ACCOUNT}-${CLUSTER_NAME}-config/apps
         DST=/var/lib/apps
-        CMD="aws s3 sync --exact-timestamps --delete $APPBUCKET $DST && chmod 755 $${DST}/bin/*"
+        CMD="aws s3 sync --exact-timestamps --delete $APPBUCKET $DST && chmod 755 $DST/bin/*"
         
         # pull the IMAGE if not loaded
         docker history $IMAGE > /dev/null 2>&1 || docker pull $IMAGE
         # sync s3 apps to
-        docker run --rm --name s3sync -v $${DST}:$${DST} --env-file=$AWS_CONFIG_ENV $IMAGE /bin/bash -c "$CMD"
+        docker run --rm --name s3sync -v $DST:$DST --env-file=$AWS_CONFIG_ENV $IMAGE /bin/bash -c "$CMD"
   - path: /opt/bin/post-provision.sh
     permissions: 0700
     owner: root
